fixed services reaosns spacing

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -668,6 +668,9 @@ h1, h2, h3, h4, h5, h6 {
     .social {
         width: 200px;
         height: auto;
+        -webkit-transform: translateY(3px);
+            -ms-transform: translateY(3px);
+                transform: translateY(3px);
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
